# mt5-trading-lab

./: .gitignore  CHANGELOG.md  README.md  RELEASE_CHECKLIST.md  pyproject.toml
docs/: AGENT_STACK_INTEGRATION.md  CLAUDE_COWORK_HANDOFF.md  COMPARISON_ENGINE.md  CORE_SAFETY_BOUNDARY.md  DEMO_READINESS.md  DIAGNOSTICS_REFERENCE.md  EXAMPLES.md  INSTALL_RUNBOOK.md  JSON_OUTPUT_SCHEMA.md  LOCAL_DESKTOP_UI_DESIGN.md  METRICS_REFERENCE.md  OPTIONAL_MCP_WRAPPER.md  REPORT_INTELLIGENCE_ENGINE.md  TOOL_EXPANSION_ROADMAP.md  USAGE.md
src/trading_lab/: __init__.py  __main__.py  cli.py  compare.py  csv_deals.py  decision.py  demo_readiness.py  diagnostics.py  html_report.py  metrics.py  recommend.py  report.py  workflows.py
tests/: test_cli.py  test_cli_json_output.py  test_cli_smoke.py  test_compare_deals.py  test_compare_reports.py  test_core_no_broker_dependency.py  test_core_no_mcp_dependency.py  test_csv_deals.py  test_demo_readiness.py  test_diagnostics.py  test_html_report.py  test_metrics.py  test_recommend.py  test_report_json_schema.py  test_safety_invariants.py  test_workflows.py
tests/fixtures/: borderline_strategy_report.htm  custom_header_column_map.json  custom_header_deals.csv  losing_deals.csv  losing_strategy_report.htm  sample_deals.csv  sample_strategy_tester_report.htm  semicolon_deals.csv
